--- a/index.html
+++ b/index.html
@@ -213,29 +213,13 @@
         <div class="col-12">
             <h2 class="title position-relative pb-2 mb-4">Test Reports</h2>
         </div>
-<!-- Report 1 -->
-<!-- Report 1 -->
-<div class="col-12 text-center mb-4">
-  <div class="position-relative d-inline-block w-100">
-    <a href="https://shanip89.github.io/FinalAutomation_project/1/index.html" target="_blank">
-      <img src="img/allurereport.png" alt="Allure Report" class="img-fluid rounded mb-3 w-100">
-      <div class="portfolio-btn d-flex align-items-center justify-content-center">
-        <i class="fa fa-4x fa-plus text-white"></i>
-      </div>
-    </a>
-  </div>
-</div>
 
-
-
-
-
-        <!-- <div class="col-12 text-center">
-            <!-- כאן תוסיפי את התמונות שלך 
+         <div class="col-12 text-center">
+            <!-- כאן תוסיפי את התמונות שלך--> 
            <a href="https://shanip89.github.io/FinalAutomation_project/1/index.html" target="_blank">
     <img src="img/allurereport.png" alt="Test Report 1" class="img-fluid rounded mb-3">
 			   <i class="fa fa-4x fa-plus text-white"></i>
-</a> -->
+</a> 
 
 <a href="https://shanip89.github.io/FinalAutomation_project/1/index.html#packages" target="_blank">
     <img src="img/packages.png" alt="Test Report 2" class="img-fluid rounded mb-3">
@@ -479,6 +463,7 @@
         <script src="js/main.js"></script>
     </body>
 </html>
+
 
 
 
