--- a/index.html
+++ b/index.html
@@ -216,6 +216,21 @@
 
          <div class="col-12 text-center">
             <!-- כאן תוסיפי את התמונות שלך--> 
+		<div class="row portfolio-container">
+                                <div class="col-md-3 mb-3 portfolio-item first">
+                                    <div class="position-relative overflow-hidden mb-2">
+                                        <img class="img-fluid w-100" src="img/allurereport.png" alt="">
+                                        <div class="portfolio-btn d-flex align-items-center justify-content-center">
+											<a href="img/allurereport.png" data-lightbox="portfolio">
+												<a href="https://shanip89.github.io/FinalAutomation_project/1/index.html" target="_blank">
+                                                <i class="fa fa-4x fa-plus text-white"></i> 
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+
+
+			 
            <a href="https://shanip89.github.io/FinalAutomation_project/1/index.html" target="_blank">
     <img src="img/allurereport.png" alt="Test Report 1" class="img-fluid rounded mb-3">
 			   <i class="fa fa-4x fa-plus text-white"></i>
@@ -463,6 +478,7 @@
         <script src="js/main.js"></script>
     </body>
 </html>
+
 
 
 
