--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 </div>
 <div class="col-12 text-center">
 	<video width="100%" height="400" controls class="rounded">
-		<source src="AutomationVideoFinal.mp4" type="video/mp4">
+		<source src="AutomationVideo.mp4" type="video/mp4">
 		Your browser does not support the video tag.
 	</video>
 </div>
@@ -463,6 +463,7 @@
 <script src="js/main.js"></script>
 </body>
 </html>
+
 
 
 
