--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
 					<p>Produce results-driven test documents (STP, STD, STR) designed to optimize productivity, by effectively utilizing Jira's comprehensive test case management platform.</p>
 				</div>
 			</div>
-		
+		</div>
 		<!-- Services End -->
 
 
@@ -371,7 +371,7 @@
 								</div>
 							</div>
 						</div>
-					
+					</div>
 <!-- אחרי התמונה השלישית הוסיפי: -->
 <div class="col-md-6 mb-4 portfolio-item first" style="visibility: hidden;">
 <!-- תמונה ריקה כדי למלא את המקום -->
@@ -463,6 +463,7 @@
 <script src="js/main.js"></script>
 </body>
 </html>
+
 
 
 
