--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 	<h2 class="title position-relative pb-2 mb-4">Demo Video</h2>
 </div>
 <div class="col-12 text-center">
-	<video width="150" height="400" controls class="rounded">
+	<video width="100%" height="400" controls class="rounded">
 		<source src="AutomationVideo.mp4" type="video/mp4">
 		Your browser does not support the video tag.
 	</video>
@@ -463,6 +463,7 @@
 <script src="js/main.js"></script>
 </body>
 </html>
+
 
 
 
